Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6897

SetWindowRgn doesn't work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.3
    • Win32SS

    Description

      58176.
      SetWindowRgn doesnt seem to work correctly. There are left drawn regions.
      Attaching a Testcase.

      Attachments

        1. CORE-6897.patch
          2 kB
        2. hack-6897.patch
          1 kB
        3. Region2.cpp
          3 kB
        4. Region2.exe
          34 kB
        5. Region2inReactos.png
          Region2inReactos.png
          31 kB
        6. Region2inWindows.png
          Region2inWindows.png
          73 kB
        7. Screenshot-QEMU.png
          Screenshot-QEMU.png
          37 kB
        8. snapshot25.png
          snapshot25.png
          52 kB
        9. snapshot26.png
          snapshot26.png
          31 kB
        10. snapshot48.png
          snapshot48.png
          32 kB
        11. snapshot75.png
          snapshot75.png
          2 kB
        12. snapshot76.png
          snapshot76.png
          4 kB
        13. winpos_swp.patch
          6 kB
        14. works.png
          works.png
          28 kB

        Issue Links

          Activity

            People

              jimtabor jimtabor
              vicmarcal vicmarcal
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: