[NtUser] - Defer the changing of the window region while setting the window position. - Patch based on Stefano Toncich work. See CORE-6897 and possibly CORE-7229.

svn path=/trunk/; revision=72429